# Kinopoisk-2.0

./: .env.example  .gitignore  Makefile  README.md  TASK.md  alembic.ini  begin.py  database.py  films.py  key_secret.py  main.py  models.py  pyproject.toml  reviews.py  setup.cfg  users.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.local.yaml  docker-entrypoint.sh
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 2023_05_21_initialize_secret.py
server/: rate_limits.py  settings.py
server/adapters/database/: base.py  models.py  session.py
server/adapters/database/requests/: secret.py
server/errors/: auth_errors.py  base.py  common_errors.py  handlers.py  secret_errors.py
server/exceptions/: base.py
server/repo/exceptions/: secret.py
server/repo/models/: secret.py
server/repo/requests/: secret.py
server/routes/: __init__.py
server/routes/api/: __init__.py
server/routes/api/v1/: __init__.py
server/routes/api/v1/private/: __init__.py
server/routes/api/v1/public/: __init__.py  secret.py
server/routes/models/: secret.py
server/utils/: text.py
server/utils/fastapi/: concurrency.py
tests/: conftest.py  test_rate_limits.py
tests/routes/api/v1/public/: conftest.py  test_secret.py
tests/utils/: test_text.py
