[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["sakost <23290721+sakost@users.noreply.github.com>"]
description = "The test task for job in \"bureau 1440\" company"
name = "bureau-1440-test-task"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
asyncpg = "^0.27.0"
cryptography = "^40.0.2"
fastapi = "^0.95.2"
gunicorn = "^20.1.0"
limits = "^3.5.0"
loguru = "^0.7.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
python = "^3.11"
redis = "^4.5.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.15"}
sqlalchemy-utils = "^0.41.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"
autoflake = "^1.4"
black = "^23.3.0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^3.0.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^23.1.20"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-expression-complexity = "^0.0.11"
flake8-isort = "^6.0.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.6.0"
flake8-requirements = "^1.7.6"
flake8-return = "^1.2.0"
httpx = "^0.24.1"
isort = "^5.12.0"
logging-tree = "^1.9"
mypy = "^1.3.0"
pep8-naming = "^0.13.0"
psycopg2-binary = "^2.9.6"
pylint = "^2.17.4"
pylint-pydantic = "^0.1.8"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.3.1"
sqlalchemy = {extras = ["mypy"], version = "^2.0.15"}
toml-sort = "^0.23.1"
typeguard = "^4.0.0"
types-redis = "^4.5.5.2"
